<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PencilMe</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_reports">Reports</string>
    <string name="title_history">History</string>
    <string name="title_tbd">TBD</string>
    <string name="title_scheduled">Scheduled</string>
    <string name="title_new_task">New Task</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="due">Due</string>
    <string name="duration">Duration</string>
    <string name="multitaskable">Multitaskable</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="tbd_empty">There are no tasks to schedule.</string>
    <string name="scheduled_empty">You have no scheduled tasks.</string>
    <string name="select_time">Confirm</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="duration_dialog_title">Estimate task duration</string>


</resources>
